# lcpt-dipole

./: CMakeLists.txt  README.md  dipole_amplitude.ipynb
data/: nlo_dipole_x_0.01_as_0.1_m_0.2  nlo_dipole_x_0.01_as_0.2_m_0.2  nlo_dipole_x_0.01_as_0.35_m_0.2  nlo_dipole_x_0.1_as_0.1_m_0.2  nlo_dipole_x_0.1_as_0.2_m_0.2  nlo_dipole_x_0.1_as_0.35_m_0.2  nlo_v2_x_0.01_as_0.1_m_0.2  nlo_v2_x_0.01_as_0.2_m_0.2  nlo_v2_x_0.01_as_0.35_m_0.2  nlo_v2_x_0.1_as_0.1_m_0.2  nlo_v2_x_0.1_as_0.2_m_0.2  nlo_v2_x_0.1_as_0.35_m_0.2
dipole/: CMakeLists.txt
src/: CMakeLists.txt  example.cpp
